Ficed tooling mismatch